gitops/yola/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yola
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
